# rustacean

./: .gitguardian.yml  .gitignore  .gitleaks.toml  .gitleaksignore  COMPANY.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  openapi.json
crates/rb-audit-cli/: Cargo.toml
crates/rb-audit-cli/src/: main.rs
crates/rb-auth/: Cargo.toml
crates/rb-auth/src/: api_key.rs  error.rs  hasher.rs  lib.rs  rate_limiter.rs  token.rs
crates/rb-blob/: Cargo.toml
crates/rb-blob/src/: blob_ref.rs  error.rs  filesystem.rs  lib.rs  s3.rs  selector.rs  store.rs
crates/rb-email/: Cargo.toml  README.md
crates/rb-email/src/: email.rs  error.rs  lib.rs  sender.rs  templates.rs
crates/rb-email/templates/: reset-password.html  reset-password.txt  tenant-invite.html  tenant-invite.txt  verify-email.html  verify-email.txt
crates/rb-feature-resolver/: Cargo.toml
crates/rb-feature-resolver/src/: error.rs  lib.rs  manifest.rs  resolver.rs  types.rs
crates/rb-feature-resolver/tests/: integration.rs
crates/rb-feature-resolver/tests/fixtures/manifests/: basic.toml  no_defaults.toml  with_optional_deps.toml
crates/rb-github/: Cargo.toml
crates/rb-github/src/: app_jwt.rs  client.rs  error.rs  installation_token.rs  lib.rs  repos.rs  secret.rs  state_token.rs  token_cache.rs
crates/rb-github/src/webhook/: events.rs  mod.rs  replay.rs  verify.rs
crates/rb-github/tests/fixtures/: test_rsa_512.pem
crates/rb-kafka/: Cargo.toml
crates/rb-kafka/src/: config.rs  consumer.rs  dlq.rs  envelope.rs  errors.rs  headers.rs  lib.rs  producer.rs  retry.rs  testing.rs  testing_impl.rs
crates/rb-kafka/tests/: consumer_dlq.rs  envelope_headers.rs  metrics_emitted.rs  producer_idempotence.rs  publish_retry.rs  trace_propagation.rs
crates/rb-parse-syn/: Cargo.toml
crates/rb-parse-syn/src/: lib.rs
crates/rb-schemas/: Cargo.toml  README.md  build.rs
crates/rb-schemas/src/: lib.rs
crates/rb-sse/: Cargo.toml
crates/rb-sse/src/: broadcaster.rs  config.rs  envelope.rs  errors.rs  lib.rs  stream.rs
crates/rb-sse/tests/: metrics_emitted.rs  multi_tenant_isolation.rs  reconnect_replay.rs  single_client.rs
crates/rb-storage-neo4j/: Cargo.toml
crates/rb-storage-neo4j/src/: error.rs  graph.rs  injector.rs  label.rs  lib.rs
crates/rb-storage-neo4j/tests/: injection_corpus.rs
crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/: 001.cypher  003.cypher  004.cypher  005.cypher  006.cypher  007.cypher  008.cypher  009.cypher  010.cypher  011.cypher  012.cypher  013.cypher  014.cypher  015.cypher  016.cypher  017.cypher  018.cypher  019.cypher  020.cypher  021.cypher  022.cypher  023.cypher  024.cypher  025.cypher  026.cypher  027.cypher  028.cypher  029.cypher  030.cypher  032.cypher  033.cypher  034.cypher  035.cypher  036.cypher  037.cypher  038.cypher  039.cypher  040.cypher  041.cypher  042.cypher  (+10 more)
crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/sanitize/: 002.cypher  003.cypher  004.cypher  005.cypher  006.cypher  007.cypher  008.cypher  (+44 more)
crates/rb-storage-pg/: Cargo.toml
crates/rb-storage-pg/src/: lib.rs
crates/rb-storage-pg/tests/: integration.rs  routing.rs
crates/rb-tracing/: Cargo.toml  README.md
crates/rb-tracing/src/: json_layer.rs  lib.rs
services/audit-worker/: Cargo.toml
services/audit-worker/src/: audit_consumer.rs  main.rs  mirror_consumer.rs
services/control-api/: Cargo.toml
services/control-api/src/: config.rs  error.rs  ingest_consumer.rs  lib.rs  main.rs  openapi.rs  server.rs  state.rs
services/control-api/src/ingest_consumer/: db.rs  mod.rs  sse.rs
services/control-api/src/middleware/: auth.rs
services/control-api/src/routes/: api_keys.rs  auth.rs  auth_logout.rs  auth_verify.rs  health.rs  me.rs  mod.rs  repos.rs  tenants.rs
services/control-api/src/routes/audit/: mod.rs
services/control-api/src/routes/github/: health.rs  install.rs  mod.rs  repos.rs  webhook.rs
services/control-api/src/routes/ingest/: events_stream.rs  mod.rs  test_publish.rs  trigger.rs
services/control-api/src/routes/tenants/: mod.rs  role.rs
services/control-api/tests/: integration_github_webhook.rs  integration_ingest_tests.rs  integration_logout_tests.rs  integration_me_tests.rs  integration_tests.rs
services/embed-worker/: Cargo.toml
services/embed-worker/src/: consumer.rs  embedder.rs  main.rs  qdrant.rs
services/embed-worker/tests/: metrics_emitted.rs
services/expand-worker/: Cargo.toml
services/expand-worker/src/: archive.rs  consumer.rs  main.rs  workspace.rs
services/expand-worker/tests/: integration.rs
services/expand-worker/tests/fixtures/feature-flagged-workspace/: Cargo.toml
services/ingest-clone/: Cargo.toml
services/ingest-clone/src/: consumer.rs  main.rs
services/ingest-clone/tests/: metrics_emitted.rs
services/ingest-graph/: Cargo.toml
services/ingest-graph/src/: consumer.rs  extractor.rs  main.rs
services/ingest-graph/tests/: integration.rs
services/ingest-graph/tests/fixtures/graph_inputs/: bounds.rs  derives.rs  impls.rs
services/migrate/: Cargo.toml
services/migrate/src/: error.rs  lib.rs  main.rs
services/migrate/src/kafka/: admin.rs  mod.rs
services/migrate/src/pg/: control.rs  mod.rs  runner.rs  tenant.rs
services/migrate/tests/: kafka_integration.rs  pg_integration.rs
services/parse-worker/: Cargo.toml
services/parse-worker/src/: consumer.rs  helpers.rs  main.rs  parse_strategy.rs
services/parse-worker/tests/: integration.rs
services/parse-worker/tests/fixtures/parse_inputs/: bad_syntax.rs  complex.rs  simple.rs
services/projector-neo4j/: Cargo.toml
services/projector-neo4j/src/: consumer.rs  main.rs  writer.rs
services/projector-neo4j/tests/: metrics_emitted.rs
services/tombstoner/: Cargo.toml
services/tombstoner/src/: consumer.rs  delete.rs  main.rs
services/tombstoner/tests/: metrics_emitted.rs
services/typecheck-worker/: Cargo.toml
services/typecheck-worker/src/: consumer.rs  helpers.rs  main.rs  type_extractor.rs
services/typecheck-worker/tests/: integration.rs
services/typecheck-worker/tests/fixtures/typecheck_inputs/: complex.rs  simple.rs
(+181 files in other folders)
