[workspace]
resolver = "2"
members = [
    "crates/rb-tracing",
    "crates/rb-schemas",
    "crates/rb-tenant",
    "crates/rb-storage-pg",
    "services/migrate",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/jarnura/rustacean"
authors = ["Jarnura <jarnura47@gmail.com>"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.28"
tracing-opentelemetry = "0.29"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Protobuf (used in RUSAA-28)
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
# Database (used in RUSAA-19)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
# Kafka (used in RUSAA-20)
rdkafka = { version = "0.37", features = ["cmake-build"] }
# Error handling
thiserror = "2"
anyhow = "1"
# IDs
uuid = { version = "1", features = ["v4", "serde"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Configuration / YAML
serde_yaml = "0.9"
# Time
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "warn"
