[package]
name = "rb-audit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rb-audit-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace    = true
chrono.workspace    = true
clap.workspace      = true
reqwest             = { workspace = true }
serde.workspace     = true
serde_json.workspace = true
sqlx.workspace      = true
tokio.workspace     = true
tracing.workspace   = true
uuid.workspace      = true

[lints]
workspace = true
