[package]
name = "rb-audit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rb-audit-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace     = true
chrono.workspace     = true
clap.workspace       = true
rb-schemas           = { path = "../rb-schemas", version = "0.1.0" }
rb-storage-neo4j     = { path = "../rb-storage-neo4j", version = "0.1.0" }
rb-tenant            = { path = "../rb-tenant", version = "0.1.0" }
reqwest              = { workspace = true }
serde.workspace      = true
serde_json.workspace = true
sqlx.workspace       = true
tokio.workspace      = true
tracing.workspace    = true
uuid.workspace       = true

[lints]
workspace = true
