[package]
name = "rb-blob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
rb-tracing = { path = "../rb-tracing", version = "0.1.0" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
async-trait.workspace = true
bytes.workspace = true

# S3 optional deps
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints]
workspace = true
