[package]
name = "rb-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
minijinja.workspace = true
lettre.workspace = true
async-trait.workspace = true

[lints]
workspace = true
