[package]
name = "rb-kafka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-util = []
integration = []

[dependencies]
rdkafka.workspace = true
futures.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
opentelemetry = { workspace = true, features = ["trace"] }
tokio.workspace = true
rb-tenant = { path = "../rb-tenant", version = "0.1.0" }
rb-schemas = { path = "../rb-schemas", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
