[package]
name = "rb-schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[build-dependencies]
prost-build.workspace = true
protox = "0.7"
