[package]
name = "rb-storage-neo4j"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rb-schemas = { path = "../rb-schemas", version = "0.1.0" }
neo4rs.workspace = true
thiserror.workspace = true

[lints]
workspace = true
