[package]
name = "rb-storage-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rb-tenant = { path = "../rb-tenant" }
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
rb-schemas = { path = "../rb-schemas" }
rb-tenant = { path = "../rb-tenant" }
tokio.workspace = true

[lints]
workspace = true
