[package]
name = "rb-storage-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rb-tenant = { path = "../rb-tenant", version = "0.1.0" }
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
rb-schemas = { path = "../rb-schemas", version = "0.1.0" }
rb-tenant = { path = "../rb-tenant", version = "0.1.0" }
tokio.workspace = true

[lints]
workspace = true
