[package]
name = "control-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "control-api"
path = "src/main.rs"

[lib]
name = "control_api"
path = "src/lib.rs"

[dependencies]
rb-auth = { path = "../../crates/rb-auth", version = "0.1.0" }
rb-email = { path = "../../crates/rb-email", version = "0.1.0" }
rb-github = { path = "../../crates/rb-github", version = "0.1.0" }
rb-secrets = { path = "../../crates/rb-secrets", version = "0.1.0" }
base64.workspace = true
jsonwebtoken.workspace = true
rb-tenant = { path = "../../crates/rb-tenant", version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-storage-pg = { path = "../../crates/rb-storage-pg", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
# Webhook signing fixtures for integration_github_webhook.
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[lints]
workspace = true
