[package]
name = "embed-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "embed-worker"
path = "src/main.rs"

[dependencies]
rb-blob    = { path = "../../crates/rb-blob",    version = "0.1.0" }
rb-kafka   = { path = "../../crates/rb-kafka",   version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }

anyhow.workspace    = true
chrono.workspace    = true
metrics.workspace   = true
reqwest.workspace   = true
serde_json.workspace = true
sha2 = { workspace = true }
tokio.workspace     = true
tracing.workspace   = true
uuid.workspace      = true

[dev-dependencies]
metrics-util = { workspace = true }

[lints]
workspace = true
