[package]
name = "ingest-clone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ingest-clone"
path = "src/main.rs"

[dependencies]
rb-blob    = { path = "../../crates/rb-blob",    version = "0.1.0" }
rb-github  = { path = "../../crates/rb-github",  version = "0.1.0" }
rb-kafka   = { path = "../../crates/rb-kafka",   version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }

anyhow.workspace       = true
bytes.workspace        = true
chrono.workspace       = true
hex.workspace          = true
jsonwebtoken.workspace = true
metrics.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
sha2.workspace         = true
sqlx.workspace         = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true

walkdir = "2"
tar     = "0.4"
zstd    = "0.13"
tempfile = "3"

[dev-dependencies]
metrics-util.workspace = true

[lints]
workspace = true
