[package]
name = "projector-neo4j"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "projector-neo4j"
path = "src/main.rs"

[dependencies]
rb-kafka          = { path = "../../crates/rb-kafka",         version = "0.1.0" }
rb-schemas        = { path = "../../crates/rb-schemas",       version = "0.1.0" }
rb-storage-neo4j  = { path = "../../crates/rb-storage-neo4j", version = "0.1.0" }
rb-tracing        = { path = "../../crates/rb-tracing",       version = "0.1.0" }
anyhow.workspace  = true
chrono.workspace  = true
metrics.workspace = true
tokio.workspace   = true
tracing.workspace = true

[lints]
workspace = true
