[package]
name = "tombstoner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tombstoner"
path = "src/main.rs"

[dependencies]
rb-kafka          = { path = "../../crates/rb-kafka",         version = "0.1.0" }
rb-schemas        = { path = "../../crates/rb-schemas",       version = "0.1.0" }
rb-storage-neo4j  = { path = "../../crates/rb-storage-neo4j", version = "0.1.0" }
rb-storage-pg     = { path = "../../crates/rb-storage-pg",    version = "0.1.0" }
rb-tenant         = { path = "../../crates/rb-tenant",        version = "0.1.0" }
rb-tracing        = { path = "../../crates/rb-tracing",       version = "0.1.0" }
anyhow.workspace     = true
chrono.workspace     = true
metrics.workspace    = true
reqwest.workspace    = true
serde_json.workspace = true
sqlx.workspace       = true
tokio.workspace      = true
tracing.workspace    = true
uuid.workspace       = true

[dev-dependencies]
metrics-util.workspace = true

[lints]
workspace = true
