[package]
name = "typecheck-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typecheck-worker"
path = "src/main.rs"

[dependencies]
rb-blob    = { path = "../../crates/rb-blob",    version = "0.1.0" }
rb-kafka   = { path = "../../crates/rb-kafka",   version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }

anyhow.workspace  = true
bytes.workspace   = true
chrono.workspace  = true
hex.workspace     = true
metrics.workspace = true
sha2.workspace    = true
tokio.workspace   = true
tracing.workspace = true
uuid.workspace    = true

# Syn for AST-level type signature extraction
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }

tar      = "0.4"
tempfile = "3"
walkdir  = "2"
zstd     = "0.13"

[dev-dependencies]
metrics-util = { workspace = true }

[lints]
workspace = true
